fix: overflow x fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,7 @@ html {
   width: 100vw;
   background: rgb(8, 9, 13);
   background: linear-gradient(90deg, rgba(8, 9, 13, 1) 0%, rgba(23, 30, 47, 1) 60%);
+  overflow-x: hidden !important;
 }
 .mimic-bg {
   background: rgb(8, 9, 13);
